--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "cringedcoder.github.io",
   "private": true,
-  "dependencies": {
+  "devDependencies": {
+    "chalk": "^2.0.1",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
+    "metalsmith-author": "^1.1.0",
+    "metalsmith-collections": "^0.9.0",
+    "metalsmith-debug": "^1.1.0",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-permalinks": "^0.5.0"
-  }
+    "metalsmith-navigation": "^0.2.9",
+    "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-writemetadata": "^0.4.5",
+    "moment": "^2.18.1",
+    "sane": "^2.0.0",
+    "throttle-debounce": "^1.0.1"
+  },
+  "dependencies": {}
 }
