--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "private": true,
   "devDependencies": {
     "chalk": "^2.0.1",
+    "connect": "^3.6.2",
     "handlebars": "^4.0.5",
     "metalsmith": "^2.1.0",
     "metalsmith-author": "^1.1.0",
+    "metalsmith-browser-sync": "^1.1.1",
+    "metalsmith-build-date": "^0.2.0",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-debug": "^1.1.0",
     "metalsmith-drafts": "0.0.1",
+    "metalsmith-feed": "^0.3.0",
+    "metalsmith-gravatar": "^0.1.0",
     "metalsmith-layouts": "^1.4.1",
+    "metalsmith-mapsite": "^1.0.4",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-metallic": "^2.0.1",
     "metalsmith-navigation": "^0.2.9",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-writemetadata": "^0.4.5",
     "moment": "^2.18.1",
     "sane": "^2.0.0",
+    "serve-static": "^1.12.3",
     "throttle-debounce": "^1.0.1"
   },
   "dependencies": {}
