--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "metalsmith-metallic": "^2.0.1",
     "metalsmith-navigation": "^0.2.9",
     "metalsmith-permalinks": "^0.5.0",
+    "metalsmith-publish": "^0.1.5",
     "metalsmith-writemetadata": "^0.4.5",
     "moment": "^2.18.1",
     "sane": "^2.0.0",
