--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "metalsmith-feed": "^0.3.0",
     "metalsmith-gravatar": "^0.1.0",
     "metalsmith-layouts": "^1.4.1",
-    "metalsmith-mapsite": "^1.0.4",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-metallic": "^2.0.1",
     "metalsmith-navigation": "^0.2.9",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-publish": "^0.1.5",
+    "metalsmith-robots": "^1.0.1",
+    "metalsmith-sitemap": "^1.2.0",
     "metalsmith-writemetadata": "^0.4.5",
     "moment": "^2.18.1",
     "sane": "^2.0.0",
