--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "metalsmith-collections": "^0.9.0",
     "metalsmith-date-formatter": "^1.0.2",
     "metalsmith-debug": "^1.1.0",
+    "metalsmith-define": "^2.0.1",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-feed": "^0.3.0",
     "metalsmith-gravatar": "^0.1.0",
