--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "metalsmith-robots": "^1.0.1",
     "metalsmith-sitemap": "^1.2.0",
     "metalsmith-writemetadata": "^0.4.5",
+    "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "ncp": "^2.0.0",
