webpack babel configuration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "cringedcoder.github.io",
   "private": true,
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
     "chalk": "^2.0.1",
     "clean-webpack-plugin": "^0.1.16",
     "connect": "^3.6.2",
