--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "metalsmith-drafts": "0.0.1",
     "metalsmith-feed": "^0.3.0",
     "metalsmith-gravatar": "^0.1.0",
+    "metalsmith-ids": "^0.1.1",
     "metalsmith-layouts": "^1.4.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-metallic": "^2.0.1",
